# fw-gear-extract-slide-metadata

./: .gitignore  Dockerfile  README.md  manifest.json  pyproject.toml  requirements.txt  run.py
fw_gear_extract_slide_metadata/: main.py  staintype.py  util.py
