[tool.poetry]
name = "fw_gear_extract_slide_metadata"
version = "0.0.0"
description = "Extract slide metadata"
authors = ["D3b-TIRU <flywheel@d3b.center>"]
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "Flywheel",
    "Gears"
]
repository = "https://github.com/d3b-center/fw-gear-extract-slide-metadata"

[tool.poetry.dependencies]
python = "^3.9"
openslide-python = "1.2.0"
flywheel-gear-toolkit = "^0.6"
flywheel-sdk = "^16.0.0"
fw-core-client = "^1.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
